force-app/main/default/objects/SerieDePagamento__c/SerieDePagamento__c.object-meta.xml
<CustomObject>
    <label>Série de Pagamento DESATIVAR</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Série de Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Séries de Pagamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>