force-app/main/default/objects/SerieDePagamento__c/fields/DataPrimeiroVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiroVencimento__c</fullName>
    <label>Data Primeiro Vencimento</label>
    <type>Date</type>
</CustomField>