force-app/main/default/objects/SerieDePagamento__c/fields/Entrada__c.field-meta.xml
<CustomField>
    <fullName>Entrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entrada</label>
    <type>Checkbox</type>
</CustomField>