force-app/main/default/objects/SerieDePagamento__c/fields/Fixa__c.field-meta.xml
<CustomField>
    <fullName>Fixa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixa</label>
    <type>Checkbox</type>
</CustomField>