force-app/main/default/objects/SerieDePagamento__c/fields/Juros__c.field-meta.xml
<CustomField>
    <fullName>Juros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Juros</label>
    <type>Checkbox</type>
</CustomField>