force-app/main/default/objects/SerieDePagamento__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <length>200</length>
    <type>Text</type>
</CustomField>