force-app/main/default/objects/SerieDePagamento__c/fields/Parcelas__c.field-meta.xml
<CustomField>
    <fullName>Parcelas__c</fullName>
    <label>Parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>