force-app/main/default/objects/SerieDePagamento__c/fields/PercentualValorUnidade__c.field-meta.xml
<CustomField>
    <fullName>PercentualValorUnidade__c</fullName>
    <label>Percentual Valor Unidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>