force-app/main/default/objects/SerieDePagamento__c/fields/Periodicidade__c.field-meta.xml
<CustomField>
    <fullName>Periodicidade__c</fullName>
    <label>Periodicidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Única</fullName>
            </value>
            <value>
                <fullName>Mensal</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>