force-app/main/default/objects/SerieDePagamento__c/fields/TabelaDeVenda__c.field-meta.xml
<CustomField>
    <fullName>TabelaDeVenda__c</fullName>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipName>SerieDePagamentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>