force-app/main/default/objects/SerieDePagamento__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dação</fullName>
            </value>
            <value>
                <fullName>Permuta</fullName>
            </value>
            <value>
                <fullName>Crédito de Distrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>